Fix squished aboutme img on lowres screens

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -103,6 +103,7 @@ nav {
 #aboutme img {
   float: left;
   margin-right: 2em;
+  width: 100%;
 }
 #aboutinner {
   margin: auto;
